[tool.poetry]
name = "openai-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "openai_python"}]

[tool.poetry.dependencies]
python = "^3.11"
dotenv = "^0.0.5"


[build-system]
requires = ["poetry-core", "python-dotenv"]

build-backend = "poetry.core.masonry.api"
